--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
         <div class="container mainNav">
             <!-- List 1-->
             <nav class="siteNav">
-                <a href="" <span class="logo">Web</span><span class="logoStudio">Studio</span></a>
-
+                <a href="/" <span class="logo">Web<span class="logoStudio">Studio</span></a>
                 <ul class="navList">
                     <li class="navList-item">
-                        <a class="navList-link courant" href="./index.html">Студия</a>
+                        <a clss="navList-link courant" href="./index.html">Студия</a>
                     </li>
                     <li class="navList-item">
                         <a class="navList-link" href="./portfolio.html">Портфолио</a>
@@ -40,8 +39,8 @@
                         <svg class="icons-contakts" width="16px" height="12px">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
-
-                        info@devstudio.com</a></li>
+                        info@devstudio.com</a>
+                </li>
                 <li class="mainListContakts"><a class="contaktsLinks" href="tel:+380961111111">
 
                         <svg class="icons-contakts" width="10px" height="16px">
@@ -113,13 +112,22 @@
                 <h2 class="work_title">Чем мы занимаемся</h2>
                 <ul class="images">
                     <li class="product-thumb">
-                        <img class="product-imeges" src="./images/img1.jpg" alt="img1" width="370" />
+                       <img class="product-imeges" src="./images/img1.jpg" alt="img1" width="370" />
+                    <div class="lettering">
+                        <p>Десктопные приложения</p>
+                    </div>
                     </li>
                     <li class="product-thumb">
                         <img src="./images/img2.jpg" alt="img2" width="370" />
+                        <div class="lettering">
+                            <p>МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+                        </div>
                     </li>
                     <li class="product-thumb">
                         <img src="./images/img3.jpg" alt="img3" width="370" />
+                        <div class="lettering">
+                            <p>ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+                        </div>
                     </li> 
                 </ul>
             </div>
@@ -289,7 +297,7 @@
             </div>
         </section>
         <section class="section Clients">
-            <div class="container Join">
+            <div class="container">
                 <h2 class="clients">Постоянные клиенты</h2>
                 <ul class="container-clients">
                     <li class="box">
