--- a/portfolio.html
+++ b/portfolio.html
@@ -77,76 +77,147 @@
 
                 <ul class="card-set">
                     <li class="item">
-                        <img class="item-img" src="./images/img10.jpg" alt="img10" width="370" />
-                        <button class="item-card-set" type="button">"Технокряк - это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</button>
-                        <div class="cardItem">
-                            <h3 class="group">Технокряк</h3>
-                            <p class="groupName">Веб-сайт</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img class="item-img" src="./images/img10.jpg" alt="img10" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                                <div class="cardItem">
+                                    <h3 class="group">Технокряк</h3>
+                                    <p class="groupName">Веб-сайт</p>
+                                </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img11.jpg" alt="img11" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Постер New Orlean vs Golden Star</h3>
-                            <p class="groupName">Дизайн</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img11.jpg" alt="img11" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Постер New Orlean vs Golden Star</h3>
+                                <p class="groupName">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img12.jpg" alt="img12" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Ресторан Seafood</h3>
-                            <p class="groupName">Приложение</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img12.jpg" alt="img12" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Ресторан Seafood</h3>
+                                <p class="groupName">Приложение</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img13.jpg" alt="img13" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Проект Prime</h3>
-                            <p class="groupName">Маркетинг</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img13.jpg" alt="img13" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>    
+                            <div class="cardItem">
+                                <h3 class="group">Проект Prime</h3>
+                                <p class="groupName">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img14.jpg" alt="img14" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Проект Boxes</h3>
-                            <p class="groupName">Приложение</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img14.jpg" alt="img14" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Проект Boxes</h3>
+                                <p class="groupName">Приложение</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img15.jpg" alt="img15" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Inspiration has no Borders</h3>
-                            <p class="groupName">Веб-сайт</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img15.jpg" alt="img15" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Inspiration has no Borders</h3>
+                                <p class="groupName">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img16.jpg" alt="img16" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Издание Limited Edition</h3>
-                            <p class="groupName">Дизайн</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img16.jpg" alt="img16" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Издание Limited Edition</h3>
+                                <p class="groupName">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img17.jpg" alt="img17" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Проект LAB</h3>
-                            <p class="groupName">Маркетинг</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img17.jpg" alt="img17" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Проект LAB</h3>
+                                <p class="groupName">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="item">
-                        <img src="./images/img18.jpg" alt="img18" width="370" />
-                        <div class="cardItem">
-                            <h3 class="group">Growing Business</h3>
-                            <p class="groupName">Приложение</p>
-                        </div>
+                        <a clacc="a-item">
+                            <div class="div-item-img">
+                                <img src="./images/img18.jpg" alt="img18" width="370" />
+                                <div class="div-card-set">
+                                    <p class="item-card-set">"Технокряк - это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов"</p>
+                                </div>
+                            </div>
+                            <div class="cardItem">
+                                <h3 class="group">Growing Business</h3>
+                                <p class="groupName">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
