--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container mainNav">
             <!-- List 1-->
             <nav class="siteNav">
-                <a href="/" <span class="logo">Web<span class="logoStudio">Studio</span></a>
+                <a href="/" class="logo">Web<span class="logoStudio">Studio</span></a>
                 <ul class="navList">
                     <li class="navList-item">
                         <a clss="navList-link courant" href="./index.html">Студия</a>
