--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <footer class="colorOne">
         <div class="container footer-container">
             <div class="containerLogo">
-                <a href="/" <span class="logo">Web</span><span class="logoFooter">Studio</span></a>
+                <a href="/" class="logo">Web<span class="logoFooter">Studio</span></a>
 
                 <ul class="contaktsOne">
                     <li>
