--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img18.jpg" alt="img18" width="370" />
                                 <div class="div-card-set">
