--- a/index.html
+++ b/index.html
@@ -388,8 +388,11 @@
         </div>
     </footer>
     <div class="backdrop is-hidden" data-backdrop>
-        <div class="modal"></div>
-        <button data-close-modal>Закрыть</button>
+        <div class="modal">
+            <svg class="close" data-close-modal>
+                <use href="./images/icons.svg#icon-CLOSE"></use>
+            </svg>
+        </div>
     </div>
     <script src="./modal.js"></script>
 </body>
