--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
 
                 <ul class="card-set">
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img class="item-img" src="./images/img10.jpg" alt="img10" width="370" />
                                 <div class="div-card-set">
@@ -93,7 +93,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img11.jpg" alt="img11" width="370" />
                                 <div class="div-card-set">
@@ -109,7 +109,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img12.jpg" alt="img12" width="370" />
                                 <div class="div-card-set">
@@ -125,7 +125,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img13.jpg" alt="img13" width="370" />
                                 <div class="div-card-set">
@@ -141,7 +141,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img14.jpg" alt="img14" width="370" />
                                 <div class="div-card-set">
@@ -157,7 +157,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img15.jpg" alt="img15" width="370" />
                                 <div class="div-card-set">
@@ -173,7 +173,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img16.jpg" alt="img16" width="370" />
                                 <div class="div-card-set">
@@ -189,7 +189,7 @@
                     </li>
 
                     <li class="item">
-                        <a clacc="a-item">
+                        <a class="item-a">
                             <div class="div-item-img">
                                 <img src="./images/img17.jpg" alt="img17" width="370" />
                                 <div class="div-card-set">
