--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="/" class="logo">Web<span class="logoStudio">Studio</span></a>
                 <ul class="navList">
                     <li class="navList-item">
-                        <a clss="navList-link courant" href="./index.html">Студия</a>
+                        <a class="navList-link courant" href="./index.html">Студия</a>
                     </li>
                     <li class="navList-item">
                         <a class="navList-link" href="./portfolio.html">Портфолио</a>
@@ -57,7 +57,7 @@
             <div class="container">
                 <!--Main content-->
                 <h1 class="text">Эффективные решения для вашего бизнеса</h1>
-                <button class="mainButton" type="button" data-open-modal>Заказать услугу</button>
+                <button class="mainButton" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
 
@@ -76,7 +76,7 @@
                     </li>
                     <li class="titleClassSection">
                         <div class="iconSection">
-                            <svg class="iconClassSection" width="66,96" height="70">
+                            <svg class="iconClassSection" width="67" height="70">
                                 <use href="./images/icons.svg#icon-VectorTwo"></use>
                             </svg>
                         </div>
@@ -364,7 +364,7 @@
                     </li>
                     <li class="join-block">
                         <button class="button-icon-join">
-                            <svg class="icon-join" width="20" height="16,25">
+                            <svg class="icon-join" width="20" height="17">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </button>
@@ -387,9 +387,9 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-hidden" data-backdrop>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <svg class="close" data-close-modal>
+            <svg data-modal-close class="close" width="18" height="18">
                 <use href="./images/icons.svg#icon-CLOSE"></use>
             </svg>
         </div>
