--- a/index.html
+++ b/index.html
@@ -356,32 +356,32 @@
                 <h3 class="join">ПРИСОЕДИНЯЙТЕСЬ</h3>
                 <ul class="actions-join">
                     <li class="join-block">
-                        <button class="button-icon-join">
+                        <a href="#" class="button-icon-join">
                             <svg class="icon-join" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
-                        </button>
+                        </a>
                     </li>
                     <li class="join-block">
-                        <button class="button-icon-join">
+                        <a href="#" class="button-icon-join">
                             <svg class="icon-join" width="20" height="17">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
-                        </button>
+                        </a>
                     </li>
                     <li class="join-block">
-                        <button class="button-icon-join">
+                        <a href="#" class="button-icon-join">
                             <svg class="icon-join" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
-                        </button>
+                        </a>
                     </li>
                     <li class="join-block">
-                        <button class="button-icon-join">
+                        <a href="#" class="button-icon-join">
                             <svg class="icon-join" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -389,7 +389,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <svg data-modal-close class="close" width="18" height="18">
+            <svg data-modal-close class="close" width="11" height="11">
                 <use href="./images/icons.svg#icon-CLOSE"></use>
             </svg>
         </div>
